feat: update to show list of books and detail of a book